# UiPath-private-serverless

./: IDENTITY.md  README.md  USER.md
UiPath-private-serverless/: AGENTS.md  README-LIVE-HOST.md  README.md  pyproject.toml  requirements.txt
UiPath-private-serverless/AI_Project/: sync-output-product.sh
UiPath-private-serverless/AI_Project/agent-guidance/: tests.AGENTS.md
UiPath-private-serverless/OUTPUT_Product/: README-LIVE-HOST.md  README.md
UiPath-private-serverless/OUTPUT_Product/config/: config.example.yaml  secrets.example.env
UiPath-private-serverless/OUTPUT_Product/docs/: live-host-bootstrap.md
UiPath-private-serverless/OUTPUT_Product/scripts/: bootstrap-live-host.sh  uninstall.sh
UiPath-private-serverless/OUTPUT_Product/systemd/: uipath-runtime.service
UiPath-private-serverless/OUTPUT_Product/tests/: run_unit.py
UiPath-private-serverless/OUTPUT_Setup/: README.md  init-product.sh  install.sh
UiPath-private-serverless/config/: config.example.yaml  config.test.yaml
UiPath-private-serverless/deploy/: AGENTS.md
UiPath-private-serverless/docs/: AGENTS.md  live-host-bootstrap.md  mvp-acceptance.md
UiPath-private-serverless/scripts/: bootstrap-live-host.sh  install.sh
UiPath-private-serverless/src/: AGENTS.md
UiPath-private-serverless/src/uipath_runtime/: __init__.py  cli.py  config.py  docker_manager.py  exceptions.py  host.py  models.py  network.py  packages.py  reconciliation.py
UiPath-private-serverless/tests/unit/: test_config.py  test_drift_detection.py  test_exit_codes.py  test_health_log_evidence.py  test_scaling.py
(+51 files in other folders)
